--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -9,15 +9,15 @@
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: url(../../img/contacts-bg-mob-2x.png)
+                background-image: url(../img/contacts-bg-mob-2x.png)
             }
     @media screen and (min-width: 768px){
         padding: 100px 0;
-        background-image: url(../../img/contacts-bg-tab.png);
+        background-image: url(../img/contacts-bg-tab.png);
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: url(../../img/contacts-bg-tab-2x.png);
+                background-image: url(../img/contacts-bg-tab-2x.png);
             }        
     }
             
@@ -26,11 +26,11 @@
         padding-bottom: 130px;
         width: calc(50% + 15px);
         padding-left: 100px;
-        background-image: url(../../img/contacts-bg.png);
+        background-image: url(../img/contacts-bg.png);
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: url(../../img/contacts-bg-2x.png); 
+                background-image: url(../img/contacts-bg-2x.png); 
             }
     }
 }
