--- a/sass/layout/_prices.scss
+++ b/sass/layout/_prices.scss
@@ -2,7 +2,7 @@
     padding-top: 84px;
     padding-bottom: 84px;
     max-width: 480px;
-    background-image: url(../../img/prices-bg-mob.png);
+    background-image: url(../img/prices-bg-mob.png);
     background-color: #111319;
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,28 +11,28 @@
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: url(../../img/prices-bg-mob-2x.png);
+                background-image: url(../img/prices-bg-mob-2x.png);
             }
     @media screen and (min-width: 768px) {
         padding-top: 100px;
         padding-bottom: 100px;
         max-width: 768px;
-        background-image: url(../../img/prices-bg-tab.png);
+        background-image: url(../img/prices-bg-tab.png);
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: url(../../img/prices-bg-tab-2x.png)
+                background-image: url(../img/prices-bg-tab-2x.png)
             }        
     }
     @media screen and (min-width: 1200px) {
         padding-top: 130px;
         padding-bottom: 130px;
         max-width: 1280px;
-        background-image: url(../../img/prices-bg.png);
+        background-image: url(../img/prices-bg.png);
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: url(../../img/prices-bg-2x.png);
+                background-image: url(../img/prices-bg-2x.png);
             }    
     }
 }
