--- a/css/main.css
+++ b/css/main.css
@@ -161,27 +161,31 @@ body {
   background-color: rgba(23, 26, 36, 0.2);
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   transition: opacity 300ms, visibility 300ms;
 }
 .backdrop.is-hidden .modal {
   transform: scale(1.5) rotate(270deg) translate(100px, 100px);
 }
+.backdrop.is-hidden .mob-menu {
+  transform: scale(1.5) rotate(360deg) translate(100px, 100px);
+}
 
 .modal {
   width: 320px;
   min-height: 300px;
-  background-color: #ffffff;
+  background-color: #f3f3f3;
   border-radius: 5px;
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 25;
   transform: scale(1) rotate(0) translate(-50%, -50%);
   transition: transform 300ms;
 }
 @media screen and (min-width: 768px) {
   .modal {
-    width: 500px;
+    width: calc(25% - 20px);
     min-height: 500px;
   }
 }
