--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,26 +4,31 @@
     background-color: rgba(23, 26, 36, 0.2);
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     transition: opacity 300ms, visibility 300ms;
     &.is-hidden .modal {
         transform: scale(1.5) rotate(270deg) translate(100px, 100px);
     }
+        &.is-hidden .mob-menu {
+            transform: scale(1.5) rotate(360deg) translate(100px, 100px);
+        }
+
 }
 
 
 .modal {
     width: 320px;
     min-height: 300px;
-    background-color: #ffffff;
+    background-color: #f3f3f3;
     border-radius: 5px;
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 25;
     transform: scale(1) rotate(0) translate(-50%, -50%);
     transition: transform 300ms;
     @media  screen and (min-width: 768px) {
-        width: 500px;
+        width: calc(25% - 20px);
         min-height: 500px;
     }
 
@@ -39,8 +44,6 @@
     border: 1px solid #999999;
     border-radius: 50%;
     @extend %align-list;
-    // display: flex;
-    // align-items: center;
     justify-content: center;
 }
 
