--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ body {
 }
 
 .modal {
-  width: 320px;
+  width: calc(25% - 20px);
   min-height: 300px;
   background-color: #f3f3f3;
   border-radius: 5px;
@@ -185,7 +185,6 @@ body {
 }
 @media screen and (min-width: 768px) {
   .modal {
-    width: calc(25% - 20px);
     min-height: 500px;
   }
 }
@@ -878,7 +877,6 @@ body {
 .prices {
   padding-top: 84px;
   padding-bottom: 84px;
-  max-width: 480px;
   background-image: url(../img/prices-bg-mob.png);
   background-color: #111319;
   background-repeat: no-repeat;
@@ -895,7 +893,6 @@ body {
   .prices {
     padding-top: 100px;
     padding-bottom: 100px;
-    max-width: 768px;
     background-image: url(../img/prices-bg-tab.png);
   }
 }
@@ -1027,11 +1024,18 @@ body {
 
 .reasons-container {
   display: flex;
+  max-width: 448px;
   flex-direction: column-reverse;
+}
+@media screen and (min-width: 768px) {
+  .reasons-container {
+    max-width: 689px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .reasons-container {
     flex-direction: row;
+    max-width: 100%;
   }
 }
 
@@ -1325,7 +1329,7 @@ img {
   display: flex;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .online-container {
     width: 100%;
   }
