--- a/sass/layout/_reasons.scss
+++ b/sass/layout/_reasons.scss
@@ -11,9 +11,14 @@
 
 .reasons-container {
     display: flex;
+    max-width: 448px;
     flex-direction: column-reverse;
+    @media screen and (min-width: 768px) {
+        max-width: 689px;
+    }
     @media screen and (min-width: 1200px) {
         flex-direction: row;
+        max-width: 100%;
     }
 }
 
