--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ body {
 }
 
 .modal {
-  width: calc(25% - 20px);
+  width: calc(50% - 20px);
   min-height: 300px;
   background-color: #f3f3f3;
   border-radius: 5px;
@@ -186,6 +186,7 @@ body {
 @media screen and (min-width: 768px) {
   .modal {
     min-height: 500px;
+    left: 50%;
   }
 }
 
