--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -17,7 +17,7 @@
 
 
 .modal {
-    width: calc(25% - 20px);
+    width: calc(50% - 20px);
     min-height: 300px;
     background-color: #f3f3f3;
     border-radius: 5px;
@@ -29,6 +29,7 @@
     transition: transform 300ms;
     @media  screen and (min-width: 768px) {
         min-height: 500px;
+        left: 50%;
     }
 
 }
