--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,6 +18,7 @@
 
 .modal {
     width: calc(50% - 20px);
+    max-width: 300px;
     min-height: 300px;
     background-color: #f3f3f3;
     border-radius: 5px;
@@ -28,8 +29,11 @@
     transform: scale(1) rotate(0) translate(-50%, -50%);
     transition: transform 300ms;
     @media  screen and (min-width: 768px) {
+        max-width: 418px;
         min-height: 500px;
-        left: 50%;
+    }
+    @media screen and (min-width: 1200px) {
+        max-width: 550px;
     }
 
 }
