--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -158,9 +158,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    &:hover svg {
-        fill: #ffffff;
+    width: calc(70% - 20px);
+    @media screen and (min-width: 768px) {
+        max-width: 160px;
     }
 }
 
