--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './base/common';
 @import './utils/placeholders';
 @import './utils/mixins';
+@import './components/snow';
 @import './components/container';
 @import './components/pre-title';
 @import './components/btn';
