--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -149,8 +149,8 @@
     z-index: 5;
     padding-top: 48px;
     padding-bottom: 48px;
-    transform: scale(1);
-    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: scale(0);
+    transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
     .container {
         display: flex;
         flex-direction: column;
@@ -162,8 +162,12 @@
             visibility: hidden;
             pointer-events: none;
             transform: scale(0.5);
-            transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);;
+            transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);;
           }
+            &.is-shown{         
+            transform: scale(1);
+                      
+            }  
     @media screen and (min-width: 768px) {
         display: none;
     }      
