fix z index snow

--- a/sass/components/_snow.scss
+++ b/sass/components/_snow.scss
@@ -11,8 +11,9 @@
     position: fixed;
     inset: 0;
     overflow: hidden;
-    // touch-action: none;
-    // pointer-events: none; 
+    touch-action: all;
+    pointer-events: all;
+    z-index: -1; 
 
 }
 
