--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,9 @@ body {
   position: fixed;
   inset: 0;
   overflow: hidden;
+  touch-action: all;
+  pointer-events: all;
+  z-index: -1;
 }
 
 @keyframes flake {
@@ -591,13 +594,6 @@ body {
   flex-direction: column;
   height: 100%;
   padding-left: 40px;
-}
-.mob-menu.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transform: scale(0.5);
-  transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mob-menu.is-shown {
   transform: scale(1);
