--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -157,13 +157,13 @@
         height: 100%;
         padding-left: 40px;
     }
-        &.is-hidden {
-            opacity: 0;
-            visibility: hidden;
-            pointer-events: none;
-            transform: scale(0.5);
-            transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);;
-          }
+        // &.is-hidden {
+        //     opacity: 0;
+        //     visibility: hidden;
+        //     pointer-events: none;
+        //     transform: scale(0.5);
+        //     transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);;
+        //   }
             &.is-shown{         
             transform: scale(1);
                       
