--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -69,6 +69,7 @@
     padding-top: 208px;
     padding-left: 31px;
     padding-bottom: 183px;
+    z-index: -20;
     @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
