--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,7 @@
 .backdrop {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(23, 26, 36, 0.2);
+    // background-color: rgba(23, 26, 36, 0.2);
     position: fixed;
     top: 0;
     right: 0;
@@ -17,25 +17,25 @@
 
 
 .modal {
-    width: calc(50% - 20px);
-    max-width: 300px;
+    // width: calc(50% - 20px);
+    width: 300px;
     min-height: 300px;
     background-color: #f3f3f3;
     border-radius: 5px;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 35%;
     z-index: 25;
     transform: scale(1) rotate(0) translate(-50%, -50%);
-    transition: transform 300ms;
+    transition: opacity 300ms, visibility 300ms;
     @media  screen and (min-width: 768px) {
-        max-width: 418px;
+        left: 50%;
+        width: 418px;
         min-height: 500px;
     }
     @media screen and (min-width: 1200px) {
-        max-width: 550px;
+        width: 550px;
     }
-
 }
 
 .modal-close {
