--- a/sass/layout/_masters.scss
+++ b/sass/layout/_masters.scss
@@ -1,5 +1,6 @@
 .masters {
     padding: 42px 0;
+   
     @media screen and (min-width: 768px) {
         padding: 50px 0;
     }
@@ -12,6 +13,7 @@
 .masters-container {
     padding: 84px 31px;
     background-color: var(--alt-background-color);
+    
     @media screen and (min-width: 768px) {
         padding: 100px 159px;
     }
@@ -33,6 +35,7 @@
 }
 
 .masters-list {
+    z-index: -20;
     display: flex;
     flex-direction: column;
     margin-right: -30px;
