--- a/sass/layout/_reasons.scss
+++ b/sass/layout/_reasons.scss
@@ -11,6 +11,8 @@
 
 .reasons-container {
     display: flex;
+    padding-right: 5px;
+    padding-left: 5px;
     max-width: 448px;
     flex-direction: column-reverse;
     @media screen and (min-width: 768px) {
@@ -28,6 +30,7 @@
 }
 
 .reasons-list {
+    z-index: -20;
     width: 370px;
     display: flex;
     flex-wrap: wrap;
@@ -49,7 +52,7 @@
 }
 
 .reasons-left{
-    width: 418px;
+    width: 380px;
     @media screen and (min-width: 768px) {
         margin-left: auto;
     }
@@ -58,7 +61,7 @@
     }
 }
 .reasons-right {
-    width: 418px;
+    width: 380px;
     @media screen and (min-width: 768px) {
         margin-right: auto;
     }
@@ -106,13 +109,17 @@
 }
 
 .reasons-title {
-    color: var(--third-text-color);
+    color: var(--main-title-color);
     margin-bottom: 20px;
+    @media screen and (max-width: 767px) {
+        font-size: 32px;
+        max-width: 400px;
+    }
 }
 
 .reasons-after-title {
     margin-bottom: 44px;
-    color: var(--fourth-text-color);
+    color: var(--second-text-color);
     @media screen and (min-width: 1200px){
         margin-bottom: 0;
     }
