--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,7 @@ body {
   border-radius: 5px;
   position: absolute;
   top: 50%;
-  left: 35%;
+  left: 45%;
   z-index: 25;
   transform: scale(1) rotate(0) translate(-50%, -50%);
   transition: opacity 300ms, visibility 300ms;
@@ -788,7 +788,7 @@ body {
   font-size: 11px;
   line-height: 1.36;
   letter-spacing: 0.2em;
-  color: var(--third-text-color);
+  color: var(---main-title-color);
   transition: color 300ms linear;
 }
 .hero-link:hover, .hero-link:focus {
@@ -1123,7 +1123,7 @@ body {
 .reasons-container {
   display: flex;
   padding-right: 5px;
-  padding-left: 5px;
+  padding-left: 15px;
   max-width: 448px;
   flex-direction: column-reverse;
 }
@@ -1237,7 +1237,7 @@ body {
 }
 @media screen and (max-width: 767px) {
   .reasons-title {
-    font-size: 32px;
+    font-size: 28px;
     max-width: 400px;
   }
 }
@@ -1245,10 +1245,12 @@ body {
 .reasons-after-title {
   margin-bottom: 44px;
   color: var(--second-text-color);
+  font-size: 16px;
 }
 @media screen and (min-width: 1200px) {
   .reasons-after-title {
     margin-bottom: 0;
+    font-size: 18px;
   }
 }
 
@@ -1438,9 +1440,6 @@ img {
   display: flex;
 }
 
-.online-container {
-  z-index: -20;
-}
 @media screen and (max-width: 1200px) {
   .online-container {
     width: 100%;
@@ -1453,7 +1452,6 @@ img {
 }
 
 .online {
-  z-index: -20;
   padding: 84px 0;
   width: 100%;
   background-color: #191C26;
@@ -1467,14 +1465,12 @@ img {
 }
 
 .online-title {
-  z-index: -20;
   text-align: center;
   color: var(--main-title-color);
   margin-bottom: 44px;
 }
 
 .online-form {
-  z-index: -20;
   margin: 0 31px;
 }
 
@@ -1751,7 +1747,7 @@ img {
   font-size: 11px;
   line-height: 1.36;
   letter-spacing: 0.2em;
-  color: var(--third-text-color);
+  color: var(--main-title-color);
 }
 .footer-link:hover, .footer-link:focus {
   color: var(--accent-color);
