--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -39,7 +39,7 @@
     font-size: 11px;
     line-height: 1.36;
     letter-spacing: 0.2em;
-    color: var(--third-text-color);
+    color: var(--main-title-color);
         &:hover,
         &:focus{
             color: var(--accent-color);
