--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -48,7 +48,7 @@
     font-size: 11px;
     line-height: 1.36;
     letter-spacing: 0.2em;
-    color: var(--third-text-color);
+    color: var(---main-title-color);
     transition: color 300ms linear;
 
     &:hover,
