--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -15,6 +15,7 @@ img {
 
 .gallery-pre-title {
     margin-bottom: 44px;
+    color: var(--fourth-text-color);
     &::before {
         color: var(--third-text-color);
     }
