--- a/sass/layout/_masters.scss
+++ b/sass/layout/_masters.scss
@@ -24,6 +24,7 @@
 
 .masters-pre-title {
     margin-bottom: 20px;
+    color: var(--fourth-text-color);
     ::before {
         background-color: var(--third-text-color);
     }
