--- a/sass/components/_snow.scss
+++ b/sass/components/_snow.scss
@@ -84,7 +84,7 @@ html {
     --text: hsl(200 5% 80%);
     --hero-h: calc(100vh - 40px);
 
-    background-color: var(--surface);
+    // background-color: var(--surface);
     color: var(--text);
 }
 
